--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,18 +24,18 @@ body {
   background-color: var(--color-bg);
 }
 
-*{
+* {
   margin: 0;
   padding: 0;
-  font-family: "ABeeZee", sans-serif;
+  font-family: 'ABeeZee', sans-serif;
 }
 
 .font-alfa-slab {
-  font-family: "Alfa Slab One", serif;
+  font-family: 'Alfa Slab One', serif;
 }
 
 .text-gradient {
-  background: linear-gradient(-90deg, #FF3BFF, #ECBFBF, #5C24FF, #D94FD5);
+  background: linear-gradient(-90deg, #ff3bff, #ecbfbf, #5c24ff, #d94fd5);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
